--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-native-fetch-blob": "^0.10.8",
     "react-native-gesture-handler": "^2.15.0",
     "react-native-get-random-values": "^1.10.0",
+    "react-native-maps": "1.10.0",
     "react-native-reanimated": "^3.7.0",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.29.0",
