--- a/package.json
+++ b/package.json
@@ -17,17 +17,18 @@
     "@react-navigation/native": "^6.1.10",
     "@react-navigation/stack": "^6.3.21",
     "@types/react": "~18.2.45",
-    "bcrypt": "^5.1.1",
     "cloudinary": "^2.0.1",
     "cloudinary-core": "^2.13.0",
     "expo": "^50.0.7",
     "expo-image-picker": "^14.7.1",
     "expo-status-bar": "~1.11.1",
     "express": "^4.18.2",
+    "isaac": "^0.0.5",
     "react": "18.2.0",
     "react-dom": "^18.2.0",
     "react-native": "0.73.2",
     "react-native-animatable": "^1.4.0",
+    "react-native-bcrypt": "^2.4.0",
     "react-native-fetch-blob": "^0.10.8",
     "react-native-gesture-handler": "^2.15.0",
     "react-native-get-random-values": "^1.10.0",
