--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "cloudinary-core": "^2.13.0",
     "expo": "^49.0.23",
     "expo-image-picker": "~14.3.2",
+    "expo-secure-store": "~12.3.1",
     "expo-status-bar": "~1.6.0",
     "express": "^4.18.2",
     "isaac": "^0.0.5",
