--- a/package.json
+++ b/package.json
@@ -13,30 +13,30 @@
     "@cloudinary/url-gen": "^1.17.0",
     "@expo/metro-runtime": "~3.1.3",
     "@react-native-community/masked-view": "^0.1.11",
-    "@react-native-picker/picker": "2.4.10",
+    "@react-native-picker/picker": "^2.6.1",
     "@react-navigation/native": "^6.1.10",
     "@react-navigation/stack": "^6.3.21",
     "@types/react": "~18.2.45",
     "cloudinary": "^2.0.1",
     "cloudinary-core": "^2.13.0",
-    "expo": "^49.0.23",
-    "expo-image-picker": "~14.3.2",
-    "expo-secure-store": "~12.3.1",
-    "expo-status-bar": "~1.6.0",
+    "expo": "~50.0.8",
+    "expo-image-picker": "^14.7.1",
+    "expo-secure-store": "~12.8.1",
+    "expo-status-bar": "~1.11.1",
     "express": "^4.18.2",
     "isaac": "^0.0.5",
     "react": "18.2.0",
     "react-dom": "^18.2.0",
-    "react-native": "0.72.10",
+    "react-native": "0.73.4",
     "react-native-animatable": "^1.4.0",
     "react-native-bcrypt": "^2.4.0",
     "react-native-fetch-blob": "^0.10.8",
-    "react-native-gesture-handler": "~2.12.0",
-    "react-native-get-random-values": "~1.9.0",
-    "react-native-maps": "1.7.1",
-    "react-native-reanimated": "~3.3.0",
-    "react-native-safe-area-context": "4.6.3",
-    "react-native-screens": "~3.22.0",
+    "react-native-gesture-handler": "~2.14.0",
+    "react-native-get-random-values": "~1.8.0",
+    "react-native-maps": "1.10.0",
+    "react-native-reanimated": "~3.6.2",
+    "react-native-safe-area-context": "4.8.2",
+    "react-native-screens": "^3.29.0",
     "react-native-web": "~0.19.6",
     "styled-components": "^6.1.8",
     "typescript": "^5.3.0"
