--- a/app.json
+++ b/app.json
@@ -26,6 +26,9 @@
     "web": {
       "favicon": "./assets/favicon.png"
     },
+    "extra": {
+      "API_URL": "http://192.168.1.65:3000/api"
+    },
     "plugins": [
       "expo-secure-store"
     ]
