--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "cloudinary-core": "^2.13.0",
     "dayjs": "^1.11.10",
     "expo": "~50.0.8",
+    "expo-constants": "^15.4.5",
     "expo-image-picker": "^14.7.1",
     "expo-secure-store": "~12.8.1",
     "expo-status-bar": "~1.11.1",
